--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.ico">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Framework | Vue-3 | Laravel-10</title>
+    <title>PropNex Plus | Vue-3 </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       body { background-color: lightgray; font-family: 'Quicksand', sans-serif }
